--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,51 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
+orbs:
+  browser-tools: circleci/browser-tools@1.4.1
+working_directory: ~/automation-framework-integration
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
+  build-and-test:
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+      - image: cimg/openjdk:15.0
     steps:
+      - browser-tools/install-browser-tools:
+          chrome-version: 109.0.5414.74
+      # Checkout the code as the first step.
       - checkout
+      # Build and run the tests
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+          name: Build and run the tests
+          command: |
+            mvn clean compile test
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - target/TEST-junit-jupiter.xml
+  install-trcli-and-parse-results:
+    docker:
+      - image: cimg/python:3.11
+    steps:
+      - attach_workspace:
+          at: ./automation-framework-integration
+      - run:
+          name: Install TR CLI and upload the test results to TestRail
+          command: |
+            pip install trcli
+            trcli -y \
+             -h https://automation001.testrail.io/ \
+             --project "saks-devops" \
+             -u anju003@ymail.com \
+             -p Mummy@9907 \
+             parse_junit \
+             --title "JUnit5 Selenium Automated Test Run" \
+             --run-description $CIRCLE_BUILD_URL \
+             -f "./automation-framework-integration/target/TEST-junit-jupiter.xml"
+# Invoke jobs via workflows
 workflows:
-  say-hello-workflow:
+  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
     jobs:
-      - say-hello
+      - build-and-test
+      - install-trcli-and-parse-results:
+          requires:
+            - build-and-test
